--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
 
     <script id="messageTemplate" type="text/html">
       <div>
-        <p>{{message}}</p>
+        <p>{{createdAt}} - {{message}}</p>
       </div>
     </script>
 
     <script id="locationMessageTemplate" type="text/html">
       <div>
-        <p><a href="{{url}}" target="_blank">My current location</a></p>
+        <p>{{createdAt}} - <a href="{{url}}" target="_blank">My current location</a></p>
       </div>
     </script>
 
