--- a/public/chat.html
+++ b/public/chat.html
@@ -8,13 +8,19 @@
 
   <body>
     <div class="chat">
-      <div class="chat__sidebar"></div>
+      <div id="sidebar" class="chat__sidebar"></div>
       <div class="chat__main">
         <div id="messages" class="chat__messages"></div>
 
         <div class="compose">
           <form id="messageForm">
-            <input id="text" name="message" placeholder="Message" />
+            <input
+              id="text"
+              name="message"
+              placeholder="Message"
+              required
+              autocomplete="off"
+            />
             <button type="submit">Send</button>
           </form>
           <button id="sendLocation">Send location</button>
@@ -25,7 +31,7 @@
     <script id="messageTemplate" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Some User Name</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
@@ -35,11 +41,21 @@
     <script id="locationMessageTemplate" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Some User Name</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p><a href="{{url}}" target="_blank">My current location</a></p>
       </div>
+    </script>
+
+    <script id="sidebar-template" type="text/html">
+      <h2 class="room-title">{{room}}</h2>
+      <h3 class="list-title">Users</h3>
+      <ul class="users">
+        {{#users}}
+        <li>{{username}}</li>
+        {{/users}}
+      </ul>
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
